2009-03-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-beginPageInRect:atPlacement:): Add parentheses
	to stop compiler from complaining.

2009-03-16 03:29-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSToolbarView.m: Added code to save the configuration when
	deleting an item as well as saving an item.
	* Source/NSToolbarFrameworkPrivate.h: removed old _loadConfig method
	added new methods to track changes to toolbars.
	* Source/NSToolbar.m: Added check for items already in the toolbar,
	removed calls to _loadConfig which were commented out, implemented
	setConfigurationFromDictionary: as described in the documentation,
	changed _build to get dictionary from defaults if it's there. 
	Implemented new method _containsItemWithIdentifier: and 
	_itemsFromConfig.

2009-03-16 01:22-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSToolbarView.m: Call the _insertItemWithItemIdentifier:..
	method to add items when they are not being dragged from within 
	the toolbar and are being added from the palette.
	* Source/NSToolbarItem.m: Added information to the description
	to help with debugging.

2009-03-15 18:37-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSScrollView.m: Fix for infinite notification loop which 
	happens with some nib files.

2009-03-15 22:09-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSScrollView.m: Use the flags in initWithCoder:

2009-03-15 20:28-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSScrollView.m: Added more flags for nib loading.

2009-03-15 15:09-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSScrollView.m: Remove FIXME comment and provided an 
	explaination for why a cast wasn't used.   Added nonDynamic flag
	as well as other flags from the nib file.

2009-03-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSInfoPanel.m: Use setTitle: instead of setStringValue:
	for theme button.
